# Llama-ai-classification

./: .gitignore  README.md  config.yaml  create_test_data.py  download_model.py  eda_classification.ipynb  prompt.txt  prompt_aggregate.txt  prompt_individual.txt  pyproject.toml  report_comparison.html  setup.sh  test_gpu.sh
notebooks/: normalizacao_texto.ipynb
prompts/: legacy_prompt.txt
reports/: report_individual.html
scripts/: setup.sh  test_gpu.sh
src/: generate_report.py  main.py  preprocess_comments.py  preprocess_comments_v2.py
