[project]
name = "llama-ai-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "huggingface-hub>=1.7.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
