[project]
name = "llama-ai-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.2.0",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "torch>=2.4.0",
    "transformers>=4.48.0",
    "vllm>=0.7.0",
]
